chapter 6.7 - changes on main.cc to use hittable_list
still a little weird, start to investigate...

--- a/raytracing_petershirley/raytracing_petershirley/raytracing_petershirley.vcxproj
+++ b/raytracing_petershirley/raytracing_petershirley/raytracing_petershirley.vcxproj
@@ -146,7 +146,11 @@
   <ItemGroup>
     <ClInclude Include="src\common\color.h" />
     <ClInclude Include="src\common\ray.h" />
+    <ClInclude Include="src\common\rtweekend.h" />
     <ClInclude Include="src\common\vec3.h" />
+    <ClInclude Include="src\InOneWeekend\hittable.h" />
+    <ClInclude Include="src\InOneWeekend\hittable_list.h" />
+    <ClInclude Include="src\InOneWeekend\sphere.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
