--- a/raytracing_petershirley/raytracing_petershirley/raytracing_petershirley.vcxproj.filters
+++ b/raytracing_petershirley/raytracing_petershirley/raytracing_petershirley.vcxproj.filters
@@ -35,5 +35,17 @@
     <ClInclude Include="src\common\vec3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\InOneWeekend\sphere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\InOneWeekend\hittable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\InOneWeekend\hittable_list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\common\rtweekend.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
